crates/rspyts-macros/tests/ui/async_fn.stderr
error: `async fn` cannot be bridged — ABI 3 has no async support (docs/design/abi.md)
 --> tests/ui/async_fn.rs:4:5
  |
4 | pub async fn fetch_answer() -> u32 {
  |     ^^^^^
